adding files for locator api
