# server/routes/api/index.js
@@ -89,8 +89,10 @@ apirouter.get('/template/:template_id/mapper', templateController.getMapperByTem
 apirouter.get('/script', function(req, res){res.redirect('/api/script/sample')});
 apirouter.get('/script/:task_id', templateController.getScriptByTaskId);
 
-apirouter.get('/locator', function(req, res){res.redirect('/locator/app_type/element')});
+apirouter.post('/locator', xpathController.addXpath);
+apirouter.get('/locator/:app_type', xpathController.getApplicationXpaths);
 apirouter.get('/locator/:app_type/:element', templateController.getLocatorByKey);
+
 
 module.exports = apirouter;
 
